@@ -19,8 +19,8 @@
 <!-- For the regular version, the versionCode must have an odd tens digit. -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
         package="org.tlhInganHol.android.klingonassistant"
-        android:versionCode="92"
-        android:versionName="2012.09.10j"
+        android:versionCode="93"
+        android:versionName="2012.09.28a"
         android:installLocation="auto">
 
     <!-- Minimum Android version 2.1 (7), targeted version 4.0.3 (15). -->
